[tool.poetry]
name = "beancount-comdirect"
version = "0.1.0"
description = "Beancount Importer for Comdirect (Commerzbank) CSV exports"
readme = "README.md"
authors = ["Martin Broder <hello@martinbroder.com>"]
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Accounting",
]
include = ["README.md", "LICENSE.txt"]
repository = "https://github.com/mrtnbroder/beancount-comdirect"
keywords = ["banking", "beancount", "cli-accounting", "finance", "double-entry"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
beancount = "^2.3"
flake8 = "^5.0"
isort = "^5.13"
pytest = "^8.0"
black = "^24.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
tabulate = "^0.9.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
fmt = "black beancount_comdirect/ tests/"
lint-black = "black --check beancount_comdirect/ tests/"
lint-flake8 = "flake8 beancount_comdirect/ tests/"
lint-isort = "isort --check beancount_comdirect/ tests/"
lint = "task lint-black && task lint-flake8 && task lint-isort"
test-pytest = "pytest tests/"
test = "task test-pytest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
